# UnitsEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  helloworld.ilk  imgui.ini  naming_conv.txt
Sandbox/: CMakeLists.txt
UnitTests/: CMakeLists.txt
UnitTests/src/: entry.cpp  main.cpp  test_application.cpp  test_application.h  test_layer.cpp  test_layer.h
UnitsEditor/: CMakeLists.txt
UnitsEditor/src/: editor_application.cpp  editor_application.h  editor_layer.cpp  editor_layer.h  entry.cpp  main.cpp
UnitsEditor/src/UnitsEditor/: project_loader.cpp  project_loader.h
UnitsEngine/: CMakeLists.txt
UnitsEngine/InputEngines/: CMakeLists.txt
UnitsEngine/InputEngines/cmake/: config.cmake  cpp_files.cmake  find_backend.cmake
UnitsEngine/InputEngines/sdl3/: inputs.cpp
UnitsEngine/cmake/: UnitsEngine-config-version.cmake.in  UnitsEngine-config.cmake.in  config.cmake  cpp_files.cmake  engine_src_files.cmake
UnitsEngine/include/UnitsEngine/: application_events.h  config.h  engine.h  events.h  ilayer.h  inputs.h  layer_factory.h  layer_traits.h
UnitsEngine/include/UnitsEngine/core/: assert.h  asset_loader.h  debug.h  engine_api.h  log.h  macros.h  memory.h  platform_defines.h  types.h
UnitsEngine/include/UnitsEngine/event/: event_type.h  window_event.h
UnitsEngine/include/UnitsEngine/gpu/: gpu_command_buffer.h  gpu_device.h  gpu_graphics_pipeline.h  gpu_graphics_pipeline_specs.h  gpu_render_pass.h  gpu_sampler_specs.h  gpu_shader.h  gpu_shader_specs.h  gpu_texture_type.h
UnitsEngine/include/UnitsEngine/memory/: memory.h
UnitsEngine/include/UnitsEngine/memory/impl/: memory_macOS.ipp  memory_win32.ipp
UnitsEngine/include/UnitsEngine/types/: factory.h  float.h
UnitsEngine/include/UnitsEngine/window/: window.h  window_flags.h  window_specs.h
UnitsEngine/src/: application.cpp  application.h  engine.cpp  events.cpp  helloworld.cpp  iapplication.cpp  layer.cpp  layer_factory.cpp  layer_stack.cpp  layer_stack.h
UnitsEngine/src/UnitsEngine/core/: application.cpp  application.h  compiler_defines.h  entry_point.h  log.h  units_engine_api.h
UnitsEngine/src/core/: application.cpp  application.h  asset_loader.cpp  layer_stack.cpp  layer_stack.h  log.cpp
UnitsEngine/src/gpu/: gpu_command_buffer.cpp  gpu_device.cpp  gpu_graphics_pipeline.cpp  gpu_render_pass.cpp  gpu_sampler.cpp  gpu_shader.cpp  gpu_texture.cpp  gpu_texture_sampler_binding.cpp
UnitsEngine/src/include/UnitsEngine/: app_specs.h  application.h  assert.h  debug.h  engine_api.h  event.h  event_dispatcher.h  event_listener.h  iapplication.h  ilayer.h  layer.h  layer_factory.h  layer_traits.h  log.h
UnitsEngine/src/include/UnitsEngine/core/: core.h  log.h
UnitsEngine/src/include/UnitsEngine/event/: application_event.h  event.h  event_bus.h  event_dispatcher.h  event_listener.h  event_type.h  window_event.h
UnitsEngine/src/include/UnitsEngine/gpu/: gpu.h  gpu_command_buffer.h  gpu_device.h  gpu_filter.h  gpu_render_pass.h  gpu_render_pass_specs.h  gpu_sampler.h  gpu_sampler_address_mode.h  gpu_sampler_specs.h  gpu_texture.h  gpu_texture_format.h  gpu_texture_sampler_binding.h  gpu_texture_specs.h  gpu_texture_type.h  gpu_texture_usage.h
UnitsEngine/src/include/UnitsEngine/types/: bool.h  factory.h  number.h  types.h
UnitsEngine/src/include/UnitsEngine/window/: window.h  window_flags.h  window_specs.h
UnitsEngine/src/window/: window.cpp  window.h
UnitsGame/: CMakeLists.txt
UnitsGame/json/: settings.json
UnitsGame/src/: entry.cpp  game_application.cpp  game_application.h  main.cpp
UnitsGame/src/logic/: game_layer.cpp
UnitsGame/src/logic/include/UnitsGame/: game_api.h  game_layer.h
UnitsManager/: CMakeLists.txt
UnitsManager/cmake/: units_manager_cpp_files.cmake
UnitsManager/src/: application.cpp  application.h  main.cpp
cmake/: config.cmake  cpp_files.cmake  headers.cmake  modules.cmake  packages.cmake
cmake/toolchains/: macOS-clang++.cmake  win32-clang++.cmake
cmake/toolchains/host-darwin-aach64/: target-darwin-aarch64.cmake
cmake/toolchains/host-windows-x86_64/: target-darwin-aarch64.cmake  target-windows-x86_64.cmake
include/UnitsEngine/: config.h  config.hpp.in
include/UnitsEngine/core/: engine_api.hpp  log.hpp  macros.hpp  platform_defines.hpp
include/UnitsEngine/events/: application_events.hpp  event_category.hpp  window_events.hpp
include/UnitsEngine/gpu/vulkan/: gpu.hpp
install/UnitsEngine-v1.1/include/UnitsEngine/core/: assert.h
install/UnitsEngine-v1.1/include/UnitsEngine/event/: application_event.h  event_category.h
install/UnitsEngine-v1.1/include/UnitsEngine/gpu/: gpu_sampler.h
install/UnitsEngine-v1.1/lib/cmake/UnitsEngine/: UnitsEngine-config-version.cmake  UnitsEngine-config.cmake  UnitsEngine_export-debug.cmake  UnitsEngine_export.cmake
modules/: engine.mpp  inputs.mpp  layers.mpp  window.mpp
modules/UnitsEngine/: engine.mpp
modules/core/: log.mpp
modules/events/: events.mpp
modules/gpu/: gpu.mpp  gpu_device.mpp  gpu_surface.mpp
modules/memory/: memory.mpp
modules/memory/impl/: memory_macOS.ipp  memory_macOS.mipp  memory_win32.ipp  memory_win32.mipp
planning/: architecture.txt  layers.txt
src/: engine.cpp  engine.mpp  layers.cpp
src/core/: log.cpp
src/events/: events.cpp
src/gpu/vulkan/: gpu.cpp  gpu_device.cpp  gpu_surface.cpp
src/inputs/glfw/: inputs.cpp
src/memory/: memory.cpp
src/window/glfw/: window.cpp
style guide/: includes.txt  naming_conv.txt
